apps/sso/keycloak-Namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: keycloak
  labels:
    istio-injection: enabled
    app-name: keycloak
    version: "${KEYCLOAK_VERSION}"
    component: sso-server
    hostNetwork: "no"
    internal-service: "no"
    managed-by: chynten
    created-by: chynten
