apps/sso/keycloak-VirtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: keycloak-vs
  namespace: keycloak
  labels:
    app-name: keycloak
    version: "${KEYCLOAK_VERSION}"
    component: sso-server
    hostNetwork: "no"
    internal-service: "no"
    managed-by: chynten
    created-by: chynten
spec:
  hosts:
  - "${KEYCLOAK_DOMAIN}"
  gateways:
  - keycloak-gateway
  http:
  - route:
    - destination:
        host: keycloak-svc.keycloak.svc.cluster.local
        port:
          number: 8080
